Spring boot 4.0 (#171)
* Update the snapshot version to the latest 4.19.0-SNAPSHOT

* Update to Spring Boot 4.0